assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');

/*--------------------------------------colours*/
.bg-color-name-title {
    background-color: #517d8f;
    color: #fff;
}

.profile {
    background: #05a55a;
    color: #fff;
}

.ui-menu-color-home {
background: #517d8f;
color: #fff
}

.ui-menu-color-project {
background: #23b0e7; 
color: #fff
}

.ui-menu-color-history {
background:#8edfff;
color: #fff
}

.ui-menu-color-resume {
background:#97c4bd;
color: #fff;
}

.ui-menu-color-contact {
background: #88b2c4;
color: #fff;
}

/*----------------------------------Navbar*/

.menuitem {
    height: 25px;
    text-decoration: center;
    padding: 0;
}

.menuitem span {
    display: inline;
    text-align: center;
    letter-spacing: 1px;
}

/*---------------------------------special paddings/margins/text*/
h1,h2,h3,h4 {
    margin: 0;
}

/*------------------------------------------------section*/


/*----------------------------------heading*/
header {
    margin: 0;
}

.heading {
    margin-left: 35px;
}

/*---------------------------------------image*/

.image {
    background: url("../images/pexels-skitterphoto-705164.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 400px;
    transition: all .5s ease-in-out;
    -moz-transition: all .5s ease-in-out;
    -webkit-transition: all .5s ease-in-out;
}

/*-----------------------------------------name-title-profile------*/

.name {
    font-family: "Exo", sans-serif;
    font-weight: 100;
    font-size: 40px;
    margin-top: 13px;
    color: #fff;
}

.title {
    font-family: "Roboto", sans-serif;
    font-weight: 100px;
    font-size: 25px;
    color: #fff;
}

.profile {
    font-family: "Roboto", sans-serif;
    font-weight: 100px;
    font-size: 14px;
    padding-left: 10px;
    text-align: justify;
    padding: 3px;
    color: #fff;
}

.inline-block {
    display: inline-block;
}

/*---------------------------------footer----------*/

footer {
    background-color: #8edfff;
    color: #fff;
    height: 50px;
    margin: 0;
}

.inline-block {
    display: inline-block;
}

.info i {
font-size: 25px;
color: #fff;
text-align: center;
padding-top: 5x;
padding-left: 40px;
transition: all 0.35s ease-in-out;
-moz-transition: all 0.35s ease-in-out;
-wbkit-transition: all 0.35s ease-in-out;
-o-transition: all 0.35s ease-in-out;
}

.info i:hover {
    color: #d81111;
}

.cv-pdf i {
font-size: 25px;
color: #fff;
text-align: center;
padding-top: 20px;
padding-left: 100px;
transition: all 0.35s ease-in-out;
-moz-transition: all 0.35s ease-in-out;
-wbkit-transition: all 0.35s ease-in-out;
-o-transition: all 0.35s ease-in-out;
}

.cv-pdf i:hover {
    color: #d81111;
}
  
.social-link {
padding-right: 50px;
}

.social-link li a i {
    width: 38px;
    height: 38px;    
    padding-top: 20px;
    padding-left: 100px;
    line-height: 12px;
    font-size: 30px;
    text-align: center;
    color: #fff;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -wbkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out; 
}

.social-link li a i:hover {
   color: #d81111;
}

#footer-details {
    padding: 10px;
}

